# blazingdb-ral

./: .gitignore  CMakeLists.txt  HOLAS.txt  README.md  integration_test-gen.sh
benchmarks/: CMakeLists.txt
benchmarks/interops/: CMakeLists.txt  interops_benchmark.cpp
benchmarks/jit/: CMakeLists.txt  jit_benchmark.cpp
cmake/Configuration/: CUDAConfig.cmake
cmake/Modules/: ConfigureAWSSDK.cmake  ConfigureArrow.cmake  ConfigureBlazingDBCommunication.cmake  ConfigureBlazingDBIO.cmake  ConfigureBlazingDBProcotol.cmake  ConfigureBlazingDBProtocol.cmake  ConfigureBlazingIO.cmake  ConfigureBrotli.cmake  ConfigureBuildTargets.cmake  ConfigureCUDA.cmake  ConfigureFlatBuffers.cmake  ConfigureGoogleBenchmark.cmake  ConfigureGoogleTest.cmake  ConfigureLibGDF.cmake  ConfigureLz4.cmake  ConfigureParquet.cmake  ConfigureRapidJSON.cmake  ConfigureSnappy.cmake  ConfigureSources.cmake  ConfigureThrift.cmake  ConfigureZSTD.cmake  ConfigureZeroMQ.cmake  FindArrow.cmake  FindBlazingDBIO.cmake  FindBlazingIO.cmake  FindFlatBuffers.cmake  FindLibGDF.cmake  FindZeroMQ.cmake
cmake/Templates/: AWSSDKCPP.CMakeLists.txt.cmake  Arrow.CMakeLists.txt.cmake  BlazingDBIO.CMakeLists.txt.cmake  BlazingDBProtocol.CMakeLists.txt.cmake  Boost.CMakeLists.txt.cmake  Brotli.CMakeLists.txt.cmake  FlatBuffers.CMakeLists.txt.cmake  GoogleTest.CMakeLists.txt.cmake  LibGDF.CMakeLists.txt.cmake  Lz4.CMakeLists.txt.cmake  Thrift.CMakeLists.txt.cmake  ZSTD.CMakeLists.txt.cmake  ZeroMQ.CMakeLists.txt.cmake
flatbuffers/: client_message.fbs  cudaIpcMemHandle_t.fbs  gdf_column.fbs  gdf_dtype.fbs  gdf_dtype_extra_info.fbs  gdf_message.fbs.no  gdf_time_unit.fbs  permission.fbs  resultset.fbs  server_message.fbs
resources/testdata-generator/: calcite_fake.py  sample.json  simple_sample.json  testdata.py
resources/tpch-generator/: groupby_queries.json  input_generator.py  issues_queries.json  join_queries.json  orderby_queries.json  process_all_queries.py  simple_sample.json  test_generator.py  where_queries.json
resources/tpch_input-generator/: input_generator.py  simple_sample.json
src/: CalciteExpressionParsing.cpp  CalciteExpressionParsing.h  CalciteInterpreter.cpp  CalciteInterpreter.h  CodeTimer.cpp  CodeTimer.h  ColumnManipulation.cu  ColumnManipulation.cuh  DataFrame.h  FreeMemory.cpp  FreeMemory.h  FreeMemoryPointers.h  GDFColumn.cu  GDFColumn.cuh  GDFCounter.cu  GDFCounter.cuh  JoinProcessor.cpp  JoinProcessor.h  LogicalFilter.cpp  LogicalFilter.h  QueryState.h  ResultSetRepository.cpp  ResultSetRepository.h  StringUtil.cpp  StringUtil.h  Types.h  Utils.cu  Utils.cuh  ral-message.cuh  ral_mock.cu  testing-libgdf.cu
tests/: CMakeLists.txt
tests/blazing/: CMakeLists.txt
tests/blazing/metrics/: CMakeLists.txt  StubWatch.hpp  chronometer-test.cpp
tests/calcite-interpreter/: CMakeLists.txt  calcite_interpreter-test.cu  calcite_interpreter-where-test.cu
tests/communication/: CMakeLists.txt  communication_message_test.cpp  component_message_test.cpp
tests/count/: CMakeLists.txt
tests/count/with-groupby-issue/: CMakeLists.txt  without-groupby-test.cpp
tests/cudf/column_slice/: CMakeLists.txt  column_slice_test.cu.cpp
tests/cudf/concat/: CMakeLists.txt  concat_merge_test.cpp  database_path.h.in
tests/cudf/generator/: CMakeLists.txt  random_generator_test.cu
tests/database/random_numbers/: data_handler.cpp  data_handler.h  random_numbers_10-16-1-1000.psv
tests/distributed-join/: CMakeLists.txt  distributed_join_test.cpp
tests/distribution/: CMakeLists.txt  distribution_primitives_test.cpp
tests/distribution/mocking/: Client.cpp  ClientMock.h  Server.cpp  ServerMock.h
tests/dtypes/: CMakeLists.txt  dtypes-test.cu
tests/evaluate_query/: CMakeLists.txt  evaluate_query.cu  gen-unit-tests.sh
tests/foo-sample/: foo_sample-test.cu
tests/gdf-ref-counter/: CMakeLists.txt  gdf-ref-counter-contains-one-test.cu  gdf-ref-counter-contains-test.cu  gdf-ref-counter-counting-test.cu  gdf-ref-counter-no-side-effects-test.cu  gdf-ref-counter-test.h  gdf-ref-counter-threading-test.cu
tests/gdf_column_cpp/: CMakeLists.txt  gdf_column_cpp_test.cpp  gdf_column_cpp_test.cu
tests/groupbywoagg/: CMakeLists.txt  groupbywoagg-tests.cu
tests/hdfs/: CMakeLists.txt  ConnectTest.cpp  DisconnectTest.cpp
tests/hdfs/Common/: HadoopFileSystemTest.cpp  SystemEnvironment.cpp
tests/integration/: CMakeLists.txt  generated.h  integration-test.cu
tests/integration/aggregation-without-group-by/: CMakeLists.txt  test-aggregation-without-group-by.cpp
tests/interpreter/: CMakeLists.txt  interops_coalesce_test.cu  interpreter_tests.cu  process_project_tests.cu  project_tests.cu
tests/io-test/: CMakeLists.txt  parse_csv.cu  parse_parquet.cu  parse_parquet_file.cu
tests/join-test/: CMakeLists.txt  inner-join.cu  left-join.cu
tests/joins/: CMakeLists.txt  fullouter_join.cu  leftouter_join.cu
tests/limit/: CMakeLists.txt  limit-tests.cu
tests/logical-filter/: CMakeLists.txt  logical_filter-test.cu
tests/nvcategory/: CMakeLists.txt  nvcategory-test.cu
tests/order-by/: CMakeLists.txt  order_by.cu
tests/parquet/: CMakeLists.txt
tests/parquet/file_reader/: CMakeLists.txt  api-test.cu  definition_level.cu  fix_parquet_reader.cu  null-test.cu  single_column_file-test.cpp  utils.cu  utils.cuh  versus.cu
tests/parquet/tpch/: CMakeLists.txt  fix_parquet_reader.cu  versus.cu
tests/parquet/tpch/data/: lineitem_0_0.parquet  nation_0_0.parquet
tests/pjoins/: CMakeLists.txt  pjoins.cu
tests/resultset/: CMakeLists.txt  resultset.cpp
tests/resultset-repository/: resultset-repository-test.cu
tests/stress_distribution/: CMakeLists.txt  send_samples_test.cpp  send_samples_test.cu
tests/tpch/: CMakeLists.txt  csv_utils.cuh  gen-unit-tests.sh  groupby_no_agg_tests.cu  sample.cu  tpch-tests.cu  tpch_csv_tests.cu
tests/unary/: CMakeLists.txt  unary-tests.cu
tests/union/: CMakeLists.txt  union-all-tests.cu
tests/utilities/: gdf_column_cpp_utilities.cu  gdf_column_cpp_utilities.h
tests/utils/: CMakeLists.txt  utils-test.cpp  utils.cu  utils.h  utils_tests.cu
tests/where/: CMakeLists.txt  where-test.cpp
(+136 files in other folders)
